package com.company.Gráfica;

public interface IGraph {

    void init();
}
