package com.company;

import com.company.Gráfica.VentanaPrincipal;

public class Main {

    public static void main(String[] args) {

        // Llamada a la creación de la ventana
        VentanaPrincipal miVentana;
        miVentana = new VentanaPrincipal();
    }
}
