@startuml

title __DESARROLLO SOFTWARE's Class Diagram__\n

  namespace com.company {
    namespace API {
      class com.company.API.Api {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.Barras {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.BarrasSegundos {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      abstract class com.company.Gráfica.GraphicG {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      interface com.company.Gráfica.IGraph {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.Menu {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.Seccion3d {
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.VentanaPrincipal {
      }
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    namespace Rendimiento {
      class com.company.Rendimiento.Rendimiento {
      }
    }
  }
  

  namespace com.company {
    namespace Wave {
      class com.company.Wave.DatosWave {
      }
    }
  }
  

  com.company.Gráfica.Barras -up-|> com.company.Gráfica.GraphicG
  com.company.Gráfica.BarrasSegundos -up-|> com.company.Gráfica.GraphicG
  com.company.Gráfica.GraphicG .up.|> com.company.Gráfica.IGraph
  com.company.Gráfica.GraphicG -up-|> javax.swing.JFrame
  com.company.Gráfica.Menu .up.|> java.awt.event.ActionListener
  com.company.Gráfica.Menu -up-|> javax.swing.JFrame
  com.company.Gráfica.Menu o-- com.company.Wave.DatosWave : wave
  com.company.Gráfica.Seccion3d -up-|> com.company.Gráfica.GraphicG
  com.company.Gráfica.VentanaPrincipal .up.|> java.awt.event.ActionListener
  com.company.Gráfica.VentanaPrincipal -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
